# omni-dash

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONFIG_MAP.md  Dockerfile  README.md  pyproject.toml
.claude/: LEARNINGS.md  settings.json
.claude/skills/feedback-handling/: SKILL.md
.claude/skills/omni-expert/: SKILL.md
.claude/skills/omni-query/: SKILL.md
docs/: SLACK_SETUP.md
scripts/: github_utils.py  slack_bot.py
src/omni_dash/: __init__.py  __main__.py  config.py  exceptions.py
tests/: conftest.py  test_config.py  test_exceptions.py
tests/fixtures/: reference_dashboard_export.json  reference_google_ads_export.json  reference_growth_dashboard_export.json  reference_paid_search_export.json  reference_plg_signups_export.json  reference_wbr_export.json
tests/test_agent/: test_context.py  test_executor.py  test_loop.py  test_router.py  test_tool_registry.py
tests/test_ai/: test_chart_recommender.py  test_generate_cmd.py  test_prompts.py  test_service.py  test_tools.py
tests/test_api/: test_ai.py  test_client.py  test_documents.py  test_models.py  test_queries.py  test_rate_limiter.py
tests/test_cli/: test_cli.py
tests/test_dashboard/: test_builder.py  test_definition.py  test_layout.py  test_serializer.py  test_validator.py
tests/test_dbt/: test_manifest_reader.py  test_model_registry.py  test_schema_reader.py
tests/test_mcp/: test_sanitize_filters.py  test_server.py
tests/test_slack/: test_bot.py  test_conversation_store.py  test_streaming.py
tests/test_templates/: test_engine.py  test_registry.py  test_validator.py
(+53 files in other folders)
