[project]
name = "omni-dash"
version = "0.1.0"
description = "Programmatic Omni BI dashboard builder with dbt integration"
readme = "README.md"
authors = [
    { name = "damarajui", email = "inaandamaraju02@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "omni-python-sdk>=0.1.11",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "typer[all]>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "pytest-cov>=5.0",
    "ruff>=0.3",
]
ai = [
    "anthropic>=0.42",
]
mcp = [
    "mcp>=1.0",
]

[project.scripts]
omni-dash = "omni_dash.cli.app:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring Omni API access",
]
